fixing switch alignment

--- a/styles/_calendar.scss
+++ b/styles/_calendar.scss
@@ -27,11 +27,10 @@
     }
 
     &--modes {
+      flex: 1;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: .9em;
-      flex: 1;
       font-size: 1.3em;
     }
 
