--- a/styles/_switch.scss
+++ b/styles/_switch.scss
@@ -1,5 +1,5 @@
 .sim-switch {
-  display: inline-block;
+  display: inline-flex;
   label {
     display: inline-flex;
     align-items: center;
